--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,15 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // Add Gradle plugins needed for the build process
+        classpath 'com.android.tools.build:gradle:8.1.1' // Example Gradle plugin version
+        classpath 'com.google.gms:google-services:4.4.2' // Updated version
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -6,11 +18,10 @@ allprojects {
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(":app")
+    project.evaluationDependsOn(":app") // Only include this if necessary
 }
 
 tasks.register("clean", Delete) {
