--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.18.0
+  intl: ^0.20.0
   cupertino_icons: ^1.0.8
   get: ^4.6.5
   http: ^1.2.2
   url_launcher: ^6.1.9
-
+  shared_preferences: ^2.3.2  
+  google_sign_in: ^6.2.1
+  firebase_auth: ^4.17.8
+  firebase_messaging: ^14.7.19
+  cloud_firestore: ^4.15.8
+  firebase_core: ^2.27.0
+  firebase_storage: ^11.6.9
+  geolocator: ^12.0.0
+  timezone: ^0.10.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,8 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
