--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^11.6.9
   geolocator: ^12.0.0
   timezone: ^0.10.0
+  crypto: ^3.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
